--- a/ince.html
+++ b/ince.html
@@ -12,8 +12,7 @@
 </head>
 
 <body>
-
-    <!-- Navbar -->
+    <!-- Header -->
     <nav>
         <div class="logo">Ayush Lokare</div>
         <ul>
@@ -102,7 +101,7 @@
   
     
         <script src="back.js">
-document.getElementById('contactForm').addEventListener('submit', async (e) => {
+    document.getElementById('contactForm').addEventListener('submit', async (e) => {
     e.preventDefault();
     const name = document.getElementById('name').value.trim();
     const email = document.getElementById('email').value.trim();
