--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link href="styles.css" rel="stylesheet">
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 
 <body>
     <!-- Header -->
     <nav>
         <div class="logo">Ayush Lokare</div>
+        <div class="menu-toggle">&#9776;</div> <!-- hamburger -->
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
@@ -21,6 +22,7 @@
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
+
 
 
     <section class="hero" id="home">
@@ -89,16 +91,16 @@
                 <button type="submit">Send Message</button>
             </form>
         </div>
-         <div class="socials">
-        <a href="https://www.linkedin.com/in/ayush-lokare/" aria-label="LinkedIn" target="_blank" rel="noopener">
-        <i class="fa-brands fa-linkedin"></i></a>
-        <a href="https://www.instagram.com/ayuuu__23__/" aria-label="Instagram" target="_blank" rel="noopener">
-        <i class="fa-brands fa-instagram"></i></a>
-        <a href="https://github.com/ayu1223" aria-label="GitHub" target="_blank" rel="noopener">
-        <i class="fa-brands fa-github"></i></a>
+        <div class="socials">
+            <a href="https://www.linkedin.com/in/ayush-lokare/" aria-label="LinkedIn" target="_blank" rel="noopener">
+                <i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.instagram.com/ayuuu__23__/" aria-label="Instagram" target="_blank" rel="noopener">
+                <i class="fa-brands fa-instagram"></i></a>
+            <a href="https://github.com/ayu1223" aria-label="GitHub" target="_blank" rel="noopener">
+                <i class="fa-brands fa-github"></i></a>
         </div>
     </section>
-   
+
     <!-- Popup -->
     <div id="popup" class="popup">
         <div class="popup-content">
@@ -110,9 +112,17 @@
     </div>
 
     <script>
-        function closePopup(){
+        function closePopup() {
             document.getElementById('popup').style.display = 'none';
         }
+
+        const menuToggle = document.querySelector(".menu-toggle");
+        const navLinks = document.querySelector("nav ul");
+
+        menuToggle.addEventListener("click", () => {
+            navLinks.classList.toggle("show");
+        });
+
 
         document.getElementById('contactForm').addEventListener('submit', async (e) => {
             e.preventDefault();
@@ -125,7 +135,7 @@
                 return;
             }
 
-            
+
             try {
                 const res = await fetch('http://localhost:3023/contact', {
                     method: 'POST',
