--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p>I am a passionate developer with experience in building web applications, competitive programming, and
                 problem-solving. I love creating beautiful and functional user interfaces.</p>
             <h3>Physically speaking</h3>
-            <p>I am Calisthenics athelet with mastered advanced skills. </p>
+            <p>I am Calisthenics athlete with mastered advanced skills. </p>
         </div>
     </section>
 
