--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                 <i class="fa-brands fa-instagram"></i></a>
             <a href="https://github.com/ayu1223" aria-label="GitHub" target="_blank" rel="noopener">
                 <i class="fa-brands fa-github"></i></a>
+            <a href="tel:+91 8793787431" aria-label="Call us"><i class="fas fa-phone"></i></a>
         </div>
     </section>
 
