--- a/public/index.html
+++ b/public/index.html
@@ -112,56 +112,61 @@
 
     <!-- Scripts -->
     <script>
-        const API_BASE = "https://backend-p-ucjs.onrender.com"; 
+const API_BASE = "https://backend-p-ucjs.onrender.com"; 
 
-        function closePopup() {
-            document.getElementById('popup').style.display = 'none';
+function closePopup() {
+    document.getElementById('popup').style.display = 'none';
+}
+
+const menuToggle = document.querySelector(".menu-toggle");
+const navLinks = document.querySelector("nav ul");
+menuToggle.addEventListener("click", () => {
+    navLinks.classList.toggle("show");
+});
+
+document.getElementById('contactForm').addEventListener('submit', async (e) => {
+    e.preventDefault();
+
+    const name = document.getElementById('name').value.trim();
+    const email = document.getElementById('email').value.trim();
+    const message = document.getElementById('message').value.trim();
+
+    if (!name || !email || !message) {
+        alert('Please fill all fields.');
+        return;
+    }
+
+    try {
+        const res = await fetch(`${API_BASE}/contact`, {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ name, email, message })
+        });
+
+        let data = {};
+        try {
+            data = await res.json();
+        } catch {
+            data = { message: "Unknown server response" };
         }
 
-        const menuToggle = document.querySelector(".menu-toggle");
-        const navLinks = document.querySelector("nav ul");
-        menuToggle.addEventListener("click", () => {
-            navLinks.classList.toggle("show");
-        });
+        if (res.ok) {
+            document.getElementById('popupMessage').innerText = data.message || "Message sent successfully!";
+        } else {
+            document.getElementById('popupMessage').innerText = data.message || "Failed to send message.";
+        }
 
-        document.getElementById('contactForm').addEventListener('submit', async (e) => {
-            e.preventDefault();
-            const name = document.getElementById('name').value.trim();
-            const email = document.getElementById('email').value.trim();
-            const message = document.getElementById('message').value.trim();
+        document.getElementById('popup').style.display = 'block';
+        document.getElementById('contactForm').reset();
 
-            if (!name || !email || !message) {
-                alert('Please fill all fields.');
-                return;
-            }
+    } catch (err) {
+        console.error("Fetch Error:", err);
+        document.getElementById('popupMessage').innerText = "😔 Oops, something went wrong. Try again later.";
+        document.getElementById('popup').style.display = 'block';
+    }
+});
+</script>
 
-            try {
-                const res = await fetch(`${API_BASE}/contact`, {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ name, email, message })
-                });
-
-                let data = {};
-                try {
-                    data = await res.json();
-                } catch {
-                    data = { message: "Unknown server response" };
-                }
-
-                if (res.ok) {
-                    document.getElementById('popupMessage').innerText = data.message || "Message sent successfully!";
-                    document.getElementById('popup').style.display = 'block';
-                    document.getElementById('contactForm').reset();
-                } else {
-                    alert(data.message || "Failed to send message.");
-                }
-            } catch (err) {
-                alert('😔 Oops, something went wrong. Try again later.');
-                console.error(err);
-            }
-        });
-    </script>
 
     <!-- Footer -->
     <footer>
