--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 
     <!-- About -->
     <section class="about" id="about">
-        <img src="public/profile_photo1.jpg" alt="Profile Picture" class="profile_photo">
+        <img src="profile_photo1.jpg" alt="Profile Picture" class="profile_photo">
         <div class="about-text">
             <h2>About Me</h2>
             <h3>Technically speaking</h3>
@@ -48,17 +48,24 @@
         <h2 style="text-align:center; margin-bottom:2rem; color:#007bff;">Projects</h2>
         <div class="projects">
             <div class="project-card">
-                <img src="public/Event_booking.png" alt="Project">
+                <img src="Event_booking.png" alt="Project">
                 <div class="content">
                     <h3>Event-Booking</h3>
                     <p>Full-stack app with Node.js and MongoDB.</p>
                 </div>
             </div>
             <div class="project-card">
-                <img src="public/Portfolio.png" alt="Project">
+                <img src="Portfolio.png" alt="Project">
                 <div class="content">
                     <h3>Portfolio</h3>
                     <p>Responsive web application using HTML, CSS, JS.</p>
+                </div>
+            </div>
+            <div class="project-card">
+                <img src="URL-s.png" alt="Project">
+                <div class="content">
+                    <h3>URL-s</h3>
+                    <p>Responsive PWA using HTML, CSS, JS.</p>
                 </div>
             </div>
         </div>
