--- a/public/index.html
+++ b/public/index.html
@@ -47,27 +47,32 @@
     <section id="projects">
         <h2 style="text-align:center; margin-bottom:2rem; color:#007bff;">Projects</h2>
         <div class="projects">
-            <div class="project-card">
-                <img src="Event_booking.png" alt="Project">
-                <div class="content">
-                    <h3>Event-Booking</h3>
-                    <p>Full-stack app with Node.js and MongoDB.</p>
-                </div>
+            <div class="projects">
+                <a href="https://event-booking-demo.com" target="_blank" class="project-card">
+                    <img src="Event_booking.png" alt="Project">
+                    <div class="content">
+                        <h3>Event-Booking</h3>
+                        <p>Full-stack app with Node.js and MongoDB.</p>
+                    </div>
+                </a>
+
+                <a href="https://portfolio-two-chi-3lgyk6xurs.vercel.app/" target="_blank" class="project-card">
+                    <img src="Portfolio.png" alt="Project">
+                    <div class="content">
+                        <h3>Portfolio</h3>
+                        <p>Responsive web application using HTML, CSS, JS.</p>
+                    </div>
+                </a>
+
+                <a href="https://url-s-tawny.vercel.app/" target="_blank" class="project-card">
+                    <img src="URL-s.png" alt="Project">
+                    <div class="content">
+                        <h3>URL-s</h3>
+                        <p>Responsive PWA using HTML, CSS, JS.</p>
+                    </div>
+                </a>
             </div>
-            <div class="project-card">
-                <img src="Portfolio.png" alt="Project">
-                <div class="content">
-                    <h3>Portfolio</h3>
-                    <p>Responsive web application using HTML, CSS, JS.</p>
-                </div>
-            </div>
-            <div class="project-card">
-                <img src="URL-s.png" alt="Project">
-                <div class="content">
-                    <h3>URL-s</h3>
-                    <p>Responsive PWA using HTML, CSS, JS.</p>
-                </div>
-            </div>
+
         </div>
     </section>
 
