--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
         <h2 style="text-align:center; margin-bottom:2rem; color:#007bff;">Projects</h2>
         <div class="projects">
             <div class="projects">
-                <a href="https://event-booking-demo.com" target="_blank" class="project-card">
+                <a href="https://event-booking-app-ies5.onrender.com" target="_blank" class="project-card">
                     <img src="Event_booking.png" alt="Project">
                     <div class="content">
                         <h3>Event-Booking</h3>
